# helixBlockchain

./: .env.example  .gitignore  .gitleaks.toml  Backup.py  Block.py  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Funcoes.py  LICENSE  Principal.py  README.md  SECURITY.md  docker-compose.yml  install.sh  mkdocs.yml  passarParaFrente.py  pyproject.toml  requirements.md  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: build.yml  docs.yml  security.yml
deploy/helm/helix/: Chart.yaml  README.md  values.yaml
deploy/helm/helix/templates/: _helpers.tpl  pdb.yaml  secret.yaml  service.yaml  servicemonitor.yaml  statefulset.yaml
docs/: README.md  api.md  architecture.md  configuration.md  console.md  development.md  installation.md  observability.md  operations.md  requirements.md  security.md
docs/compliance/: data-classification.md  lgpd.md
legacy/: Backup.py  Block.py  Principal.py  README.md
ops/grafana/: helix-dashboard.json
ops/prometheus/: alerts.yml
scripts/: backup.sh  gen_dev_secrets.py
specs/: Helix.cfg  Helix.tla  README.md
src/helix_blockchain/: __init__.py  app.py  clock.py  config.py  metrics.py  tls.py  tracing.py
src/helix_blockchain/collectors/: __init__.py  integrity.py  orion.py
src/helix_blockchain/consensus/: __init__.py  engine.py  journal.py  messages.py  validator_set.py
src/helix_blockchain/domain/: __init__.py  block.py  canonical.py  confidentiality.py  crypto.py  membership.py  merkle.py  records.py
src/helix_blockchain/network/: __init__.py  bootstrap.py  discovery.py  node.py  ratelimit.py  server.py  transport.py
src/helix_blockchain/notify/: __init__.py  notifier.py
src/helix_blockchain/static/: __init__.py  index.html
src/helix_blockchain/storage/: __init__.py  repository.py  sql.py
src/helix_blockchain/tools/: __init__.py  gen_certs.py  keygen.py
tests/: test_audit.py  test_auth.py  test_block.py  test_bootstrap.py  test_confidentiality.py  test_config.py  test_consensus.py  test_crypto.py  test_discovery.py  test_fuzz_consensus.py  test_integrity.py  test_journal.py  test_membership.py  test_mempool_gossip.py  test_merkle.py  test_merkle_proof.py  test_metrics.py  test_node.py  test_notify.py  test_notify_webhook.py  test_orion_changes.py  test_postgres.py  test_ratelimit.py  test_record_signing.py  test_round_change.py  test_secrets.py  test_server.py  test_storage.py  test_tls.py  test_tracing.py  test_ui.py
