[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helix-blockchain"
version = "0.4.0"
description = "Permissioned BFT blockchain for tamper-evident integrity of FIWARE Orion (Helix Sandbox NG) IoT data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rafael Martinez" }]
keywords = ["blockchain", "bft", "iot", "fiware", "orion", "integrity"]

dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "cryptography>=42.0",
    "sqlalchemy>=2.0",
    "pymongo>=4.6",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "opentelemetry-api>=1.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
    "opentelemetry-sdk>=1.25",
    "hypothesis>=6.100",
]
postgres = ["psycopg[binary]>=3.1"]
docs = ["mkdocs-material>=9.5"]
otel = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]

[project.scripts]
helix-node = "helix_blockchain.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/helix_blockchain"]
# Ensure non-Python assets (the /ui console) are packaged in the wheel.
artifacts = ["src/helix_blockchain/static/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["helix_blockchain"]
mypy_path = "src"

[tool.bandit]
# B101 assert (tests), B104 bind 0.0.0.0 (config default),
# B107 empty-string defaults for optional password/token fields (not secrets).
exclude_dirs = ["tests", "legacy"]
skips = ["B101", "B104", "B107"]
